# twinkletaps

./: .cursor.workflow  .cursorignore  .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .workflow  CLAUDE.md  README.md  codecov.yml
.claude/: settings.json
.claude/agents/: code-reviewer.md  planner.md  test-runner.md  visual-qa.md
.claude/docs/: code-reviewer-template.md  condition-based-waiting.md  defense-in-depth.md  quality-checklist.md  root-cause-tracing.md  testing-anti-patterns.md
.claude/hooks/: allow-poe-agent-utils.sh  bash-allowlist.sh  permission-gate.sh  reject-chaining.sh  restrict-write-to-project.sh
.claude/retrospectives/: 2026-02-20-retro.md  2026-03-08-retro.md  2026-03-16-retro.md  2026-03-20-retro.md
.claude/rules/: workflow.md
.cursor/agents/: code-reviewer.md  planner.md  test-runner.md
.cursor/rules/: commit-and-pr.mdc  general.mdc  workflow.mdc
.cursor/skills/: README.md
.github/: dependabot.yml  docker-compose.ci-integration.yml
.github/workflows/: agent-utils--ci.yml  agent-utils--update-precommit.yml  ci.yml  cursor-retro--ci.yml  cursor-retro--update-precommit.yml  hivemq-auth-extension--ci.yml  hivemq-deployment--ci.yml  jira-utils--ci.yml  ticket-loop--ci.yml  twinkletaps-app--build.yml  twinkletaps-app--ci.yml  twinkletaps-app--e2e.yml  twinkletaps-app--install-dependencies.yml  twinkletaps-app--integration.yml  twinkletaps-app--lint.yml  twinkletaps-app--test.yml  twinkletaps-lamp--ci.yml  update-precommit.yml
agent-utils/: LICENSE  pyproject.toml
agent-utils/agent_utils/: cli.py  gh_pr_checks.py  gh_pr_close.py  gh_pr_create.py  gh_pr_fetch.py  gh_pr_list.py  gh_pr_reply.py  gh_pr_view.py  gh_run_view.py  git_commit.py  git_push.py
agent-utils/scripts/: configure.sh  find-grep.sh  run-with-tail.sh
agent-utils/tests/: test_agent_utils.py  test_gh_pr_checks.py  test_gh_pr_close.py  test_gh_pr_create.py  test_gh_pr_fetch.py  test_gh_pr_list.py  test_gh_pr_reply.py  test_gh_pr_view.py  test_git_commit.py  test_git_push.py
arduino-main/: Led.cpp  Led.h  Network.cpp  Network.h  Relay.cpp  arduino-main.ino  arduino-secrets.h.template  wifi-test.ino
auth/: README.md  current-config.json  justfile
auth/ory/: config.yaml
auth/scripts/: update-config.sh
cursor-retro/: .pre-commit-config.yaml  LICENSE  pyproject.toml
cursor-retro/cursor_retro/: cli.py  extract.py  workspace.py
cursor-retro/tests/: helpers.py  test_cli.py  test_cursor_retro.py  test_extract.py  test_workspace.py
docs/plans/: 2026-02-18-cursor-retro-design.md  2026-02-18-cursor-retro-plan.md
hivemq-auth-extension/: build.gradle.kts  settings.gradle.kts
hivemq-deployment/: Dockerfile  docker-compose.ci.yml  docker-compose.yml
hivemq-deployment/scripts/: configure.sh  smoke-test.sh
jira-utils/: LICENSE  pyproject.toml
jira-utils/jira_utils/: _output.py  add_comment.py  add_to_sprint.py  cli.py  client.py  create_issue.py  create_issue_link.py  fetch_task.py  get_board_issues.py  get_boards.py  get_issue.py  get_link_types.py  get_project_components.py  get_project_versions.py  get_sprints.py  get_transitions.py  move_to_backlog.py  move_to_board.py  search.py  transition_issue.py  update_issue.py
jira-utils/scripts/: update.sh
jira-utils/tests/: test_add_comment.py  test_add_to_sprint.py  test_client.py  test_create_issue.py  test_create_issue_link.py  test_fetch_task.py  test_get_board_issues.py  test_get_boards.py  test_get_issue.py  test_get_link_types.py  test_get_project_components.py  test_get_project_versions.py  test_get_sprints.py  test_get_transitions.py  test_move_to_backlog.py  test_move_to_board.py  test_search.py  test_transition_issue.py  test_update_issue.py
scripts/: configure.sh
ticket-loop/: .gitignore  LICENSE  README.md  pyproject.toml
ticket-loop/.github/: dependabot.yml
ticket-loop/schemas/: board_state.json
ticket-loop/scripts/: configure.sh
ticket-loop/tests/: test_backoff.py  test_ticket_loop.py  test_watch.py
ticket-loop/ticket_loop/: backoff.py  main.py  watch.py
twinkletaps-app/: .gitignore  AUTHORS  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
twinkletaps-app/.github/: dependabot.yml
twinkletaps-app/.storybook/: preview.ts
twinkletaps-app/prisma/: schema.prisma
twinkletaps-app/scripts/: add-copyright-notice.js  create-supabase-db.sh  parse-licenses.js  update-email-templates.js
twinkletaps-app/src/: middleware.ts
twinkletaps-app/supabase/: config.toml  seed.sql
twinkletaps-be/: .gitignore  README.md  pyproject.toml  whitelist.txt
twinkletaps-be/scripts/: configure.sh  manage.py  try-runserver.sh
twinkletaps-be/settings/: core.py  dev.py
twinkletaps-be/twinkletaps_be/apps/taps/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
twinkletaps-be/twinkletaps_be/apps/taps/migrations/: 0001_initial.py  0002_alter_tap_id.py  0002_device_api_key.py  0003_rename_target_tap_device.py
twinkletaps-be/twinkletaps_be/apps/taps/tests/: test_device_views.py  test_models.py  test_tap_views.py
twinkletaps-be/twinkletaps_be/apps/users/: apps.py
twinkletaps-be/twinkletaps_be/apps/users/migrations/: 0001_initial.py  0002_alter_user_id.py
twinkletaps-be/twinkletaps_be/backend/: asgi.py  urls.py  wsgi.py
twinkletaps-lamp/: .active_project  .board_fqbn  .board_port  .gitignore
twinkletaps-ui/: .eslintrc.json  .gitignore  .prettierrc.cjs  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  settings.scss
twinkletaps-ui/pages/: index.vue  (+1 more)
ui/: .eslintrc.json  .npmignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
web-app/deployment/aws/prod/: .terraform.lock.hcl  instance.tf  main.tf  route53-zone.tf  route53.tf  s3.tf  variables.tf
web-app/deployment/aws/prod/scripts/: install-docker.sh
web-app/scripts/: entrypoint.sh
web-app/the_one_lamp_web_app/: basic_auth.py  redis.py  server.py  token_auth.py
web-app/the_one_lamp_web_app/templates/: index.html
(+223 files in other folders)
